--- a/world.css
+++ b/world.css
@@ -1,1 +1,17 @@
-/* Add your own styles */
+table{
+    width: 70%;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+table, tr, th, td{
+    border: 1px solid #d4d4d4;
+    border-collapse: collapse;
+    padding: 12px;
+}
+th, td{
+    text-align: left;
+    vertical-align: top;
+}
+tr:nth-child(even){
+    background-color: #e7e9eb;
+}/* Add your own styles */
