--- a/world.css
+++ b/world.css
@@ -1,3 +1,16 @@
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header{
+    grid-area: 1;
+    background-color: rgb(5, 45, 146);
+    color: rgb(247, 236, 236);
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 table{
     width: 70%;
     margin: auto;
@@ -14,4 +27,23 @@ th, td{
 }
 tr:nth-child(even){
     background-color: #e7e9eb;
-}/* Add your own styles */
+}
+
+input{
+    padding: 5px;
+    padding-left: 150px;
+    padding-right: 150px;
+    margin: 5px;
+    
+ }
+ 
+ #lookup{
+     background-color: rgb(48, 124, 212);
+     color: white;
+     border-radius: 5px;
+     padding: 5px;
+     padding-left: 10px;
+     padding-right: 10px;
+     margin: 5px;
+ }
+/* Add your own styles */
